# pokemonDB

./: CHANGELOG.md  LICENSE  pokemonDB.cabal
app/: Main.hs
src/: ApiProcessing.hs  GenericData.hs  MyLib.hs  Queries.hs  TableManipulation.hs
