cabal-version:      2.4
name:               pokemonDB
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sarah Dylan
maintainer:         SarahmDylan@gmail.com

-- A copyright notice.
-- copyright:
category:           Database
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
                    , ApiProcessing
                    , GenericData
                    , TableManipulation
    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
                    , opaleye ^>=0.10.2.0
                    , product-profunctors ^>=0.11.1.1
                    , time ^>=1.12.2
                    , postgresql-simple ^>= 0.7.0.0
                    , aeson ^>= 2.2.1.0
                    , http-conduit ^>= 2.3.8.3
    hs-source-dirs:   src
    default-language: Haskell2010

executable pokemonDB
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        pokemonDB
      , postgresql-simple ^>=0.7.0.0 
      , opaleye ^>=0.10.2.0
      , http-conduit ^>= 2.3.8.3
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite pokemonDB-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.17.2.0
                    , HUnit ^>=1.6.2
